--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,102 @@
-#container {
-  text-align: center;
+:host {
+  ion-header {
+    ion-toolbar {
+      ion-icon {
+        padding: 10px;
+        font-size: 1.2rem;
+      }
+    }
+    .border {
+      display: block;
+      height: 3.5px;
+      width: 100%;
+      position: absolute;
+      background: linear-gradient(
+        90deg,
+        #42ca88 10.21%,
+        #32dde8 23.26%,
+        #f9d30d 51.47%,
+        #ed8b30 79.67%,
+        #834bde 91.041%
+      );
+    }
+  }
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  .container {
+    background-color: rgb(248, 248, 248);
+    width: 100%;
+    .category {
+      width: 100%;
+      height: 50px;
+      padding: 15px 0px 15px 0px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      overflow: auto;
+      a {
+        text-decoration: none;
+        strong {
+          font-size: 0.9rem;
+          padding: 0px 20px 0px 20px;
+        }
+      }
+    }
+    ion-card {
+      margin-bottom: 10px;
+      .contents {
+        width: 100%;
+        padding: 15px;
+        ion-item {
+          ion-avatar {
+            width: 50px;
+            height: 50px;
+          }
+          ion-label {
+            padding: 5px;
+            margin-left: 5px;
+            h2 {
+              font-size: 1.3rem;
+            }
+            p {
+              font-size: 0.8rem;
+            }
+          }
+        }
+        .comment {
+          width: 100%;
+          padding: 15px;
+          font-size: 0.8rem;
+          color: gray;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+    ion-footer {
+      width: 100%;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      font-family: "Open Sans", sans-serif;
+      ion-toolbar {
+        padding-top: 5px;
+        b {
+          color: #45505b;
+          font-size: 1.5rem;
+        }
+        p {
+          color: gray;
+        }
+      }
+      span {
+        margin-top: 10px;
+        font-size: 0.9rem;
+        color: gray;
+      }
+    }
+  }
 }
